# ndt-django-api

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
farfarplanetarium/: asgi.py  settings.py  urls.py  wsgi.py
planets/: apps.py  models.py  serializers.py  urls.py  views.py
planets/migrations/: 0001_initial.py
